<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:padding="10dp">

    <EditText
        android:id="@+id/emailInID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/signin_usr"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/passInID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sigin_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_below="@id/emailInID"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/signinBtnID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passInID"
        android:background="@color/colorAccent"
        android:text="@string/signin_btn"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/createAccBtnID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/createAcctxt"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>