<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateAccActivity"
    android:padding="20dp"
    >

    <EditText
        android:id="@+id/fullNameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fullNameTxt"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailCreateID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameID"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/emailTxt"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passCreateID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailCreateID"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/passTxt"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createAccBtnID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passCreateID"
        android:layout_marginTop="105dp"
        android:background="@color/colorPrimary"
        android:text="@string/createBtn"
        android:textColor="@android:color/white" />
</RelativeLayout>
</ScrollView>
