<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddNewNoteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.AddNewNoteActivity">

        <EditText
            android:id="@+id/addTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/addTitle"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/addBodyET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/addBody"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/addTitleET"
            android:layout_above="@id/addNoteBtn"
            />

        <Button
            android:id="@+id/addNoteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
</FrameLayout>